<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.fovi.SignUpActivity"
    style="@style/AuthBackground"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:scaleType="fitEnd"
        android:src="@drawable/backgroundfobi"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editTextLayout"
        android:layout_alignStart="@+id/editTextLayout" />

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/text_title"
        style="@style/TitleStyle"/>

    <TextView
        android:id="@+id/textViewSubtitle"
        android:text="@string/text_subtitle"
        style="@style/SubtitleStyle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthLinearStyle"
        android:layout_centerHorizontal="true"
        >

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/EditTextStyle" />

        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/emailField"
            android:hint="@string/mail_hint"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:src="@drawable/button_divider"
        style="@style/ButtonDividerStyle" />


    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:onClick="onClickRegistro"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_toLeftOf="@+id/buttonDivider"
        style="@style/btnSignStyle" />

    <Button
        style="@style/btnSignStyle"
        android:text="@string/btn_cancel"
        android:id="@+id/cancel_Button"
        android:onClick="onClickCancel"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonDivider"/>

    <ProgressBar
        android:id="@+id/pbSignup"
        style="@style/ProgressBarSignStyle" />
</RelativeLayout>
